--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#sobre">Sobre</a>
                 <a href="#">Novidades</a>
                 <a href="#">Eventos Online</a>
-                <a href="#contato">Contato</a>               
+                <a href="contato.html">Contato</a>               
             </div>
         </div>
     </header>
@@ -277,7 +277,7 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="">Novidades</a></li>
                     <li><a href="">Eventos Online</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
 
