--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="content-">
             <h1>Semana de Tecnologia<br><span>Mecânica</span></h1>
             <p>A Semana de Tecnologia Mecânica conta com atividades que contribuem para a educação técnica, socialização de práticas e cooperaram para com a entrada de vários participantes no mercado de trabalho.</p>
-            <a href="#">Programação</a>
+            <a href="https://www.even3.com.br/vi-semana-de-tecnologia-mecanica/">Programação</a>
         </div>
 
         <div class="media-icons">
@@ -182,84 +182,6 @@
                 <p>Sobretudo, nesta edição, tendo em vista a sua realização online e a total intenção do evento em atender da maneira mais eficaz os participantes com necessidades especiais, os quais, em grande parte, já integram o público interno do Instituto.</p>
             </div>
         </div>
-    </div>
-
-    <div id="contato" class="contactUs">
-        <div class="title">
-            <h2>Contato</h2>
-        </div>
-
-        <div class="box">
-            <div class="contact form">
-                <h3>Envie uma Mensagem</h3>
-                <form action="">
-                    <div class="formBox">
-                        <div class="row50">
-                            <div class="inputBox">
-                                <span>Nome</span>
-                                <input type="text" placeholder="Nome">
-                            </div>
-                            <div class="inputBox">
-                                <span>Sobrenome</span>
-                                <input type="text" placeholder="Sobrenome">
-                            </div>
-                        </div>
-
-                        <div class="row50">
-                            <div class="inputBox">
-                                <span>E-mail</span>
-                                <input type="text" placeholder="Digite seu email">
-                            </div>
-                            <div class="inputBox">
-                                <span>Telefone</span>
-                                <input type="text" placeholder="Digite seu telefone">
-                            </div>
-                        </div>
-
-                        <div class="row100">
-                            <div class="inputBox">
-                                <span>Mensagem</span>
-                                <textarea placeholder="Escreva sua mensagem aqui..."></textarea>
-                            </div>
-                        </div>
-
-                        <div class="row100">
-                            <div class="inputBox">
-                                <input type="submit" placeholder="Send">    
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <div class="contact info">
-                <h3>Informações de Contato</h3>
-                <div class="infoBox">
-                    <div>
-                        <span><ion-icon name="location-outline"></ion-icon></span>
-                        <p>R. Emídio dos Santos, s/n - Barbalho, Salvador - BA, 40301-015</p>
-                    </div>
-                    <div>
-                        <span><ion-icon name="mail-outline"></ion-icon></span>
-                        <a href="mailto:semanatecmec.ifba@gmail.com">semanatecmec.ifba@gmail.com</a>
-                    </div>
-                    <div>
-                        <span><ion-icon name="call-outline"></ion-icon></span>
-                        <a href="tel: +5571989528348">+55 (71) 98952-8348</a>
-                    </div>
-
-                    <ul class="sci">
-                        <li><a href="https://www.instagram.com/stmifba_salvador/"><ion-icon name="logo-instagram"></ion-icon></a></li>
-                    </ul>
-
-                </div>
-            </div>
-
-            <div class="contact map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.1259829683927!2d-38.502944985603705!3d-12.963789363163764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71604df54e0265b%3A0xfcb98df08aee6867!2sIFBA%20-%20Campus%20Salvador!5e0!3m2!1spt-BR!2sbr!4v1661389631212!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
-
     </div>
 
     <footer>
